--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,16 +7,32 @@ on:
     branches: [ main ]
 
 jobs:
-
-  build:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: golangci-lint
+          uses: golangci/golangci-lint-action@v2
+          with:
+            # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
+            version: v1.29
+            # Optional: golangci-lint command line arguments.
+            # args: --issues-exit-code=0
+            # Optional: if set to true then the action will use pre-installed Go
+            # skip-go-installation: true
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.15.x
 
-    - name: Test
-      run: go test -v ./...
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Run Unit tests.
+        run: go test -v .
